--- a/Pages/NetworkInfoPage.xaml
+++ b/Pages/NetworkInfoPage.xaml
@@ -6,19 +6,17 @@
       xmlns:local="clr-namespace:Niero.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="NetworkInfoPage">
+      Title="NetworkInfoPage"
+      Opacity="0">
 
     <Page.Resources>
         <TranslateTransform x:Key="BasicInfoPos" X="0" Y="0"/>
-        <TranslateTransform x:Key="AdaptersInfoPos" X="260" Y="0"/>
+        <TranslateTransform x:Key="WAdaptersInfoPos" X="260" Y="0"/>
+        <TranslateTransform x:Key="DAdaptersInfoPos" X="260" Y="300"/>
     </Page.Resources>
-    
-    <Grid>
+
+    <Grid Margin="40,0,0,0">
         <!-- Анимации перехода между страницами попробуй реализовать через события страницы (загружено, выгружено) и свойство Opacity -->
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="40"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
@@ -30,8 +28,6 @@
         <Border x:Name="MainBorder" 
                 CornerRadius="10"
                 Grid.Row="1"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
                 Style="{StaticResource MainCanvasBorder}">
             <Border.BorderBrush>
                 <SolidColorBrush x:Name="MainBorderBrush" Color="{StaticResource BaseColor}"/>
@@ -40,92 +36,209 @@
                 <!-- Basic info -->
                 <Border x:Name="DeviceInfo"
                         RenderTransform="{StaticResource BasicInfoPos}"
-                        Style="{StaticResource RoundedInfoBorder}">
+                        Style="{StaticResource InfoBorder}">
                     <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="3*"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text="Device name:"
+                        <Grid HorizontalAlignment="Left"
+                              Width="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="3"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="3"/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="1">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="2">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="3">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="4">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                        </Grid>
+                        <Grid Style="{StaticResource ElementsGridPart}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="3*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Device name:"
                            Grid.Row="0"
                            Grid.Column="0"
                            Style="{StaticResource BasicTextBlock}"/>
-                        <TextBox x:Name="DeviceNameOutput"
+                            <TextBox x:Name="DeviceNameOutput"
                            Grid.Row="0"
                            Grid.Column="1"
                            Style="{StaticResource MoveTextBox}"/>
-                        <TextBlock Text="Active local IPv4:"
+                            <TextBlock Text="Active local IPv4:"
                            Grid.Row="1"
                            Grid.Column="0"
                            Style="{StaticResource BasicTextBlock}"
                            VerticalAlignment="Top"/>
-                        <StackPanel x:Name="IPv4Output"
+                            <StackPanel x:Name="IPv4Output"
                            Grid.Row="1"
                            Grid.Column="1">
-                        </StackPanel>
+                            </StackPanel>
+                        </Grid>
                     </Grid>
                 </Border>
                 <!-- Working Adapters Info -->
                 <Border x:Name="WorkingAdaptersInfo"
-                        RenderTransform="{StaticResource AdaptersInfoPos}"
-                        Style="{StaticResource RoundedInfoBorder}">
+                        RenderTransform="{StaticResource WAdaptersInfoPos}"
+                        Style="{StaticResource InfoBorder}">
                     <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="1"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="1"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <TextBlock Text="Adapters Names"
-                                   Grid.Column="0"
-                                   Grid.Row="0"
-                                   Style="{StaticResource BasicTextBlock}">
-                        </TextBlock>
-                        <Border Background="Black"
-                                Grid.Column="1"
-                                Grid.RowSpan="2">
-                        </Border>
-                        <TextBlock Text="Ip Adresses"
-                                   Grid.Column="2"
-                                   Grid.Row="0"
-                                   Style="{StaticResource BasicTextBlock}">
-                        </TextBlock>
-                        <Border Background="Black"
-                                Grid.Column="3"
-                                Grid.RowSpan="2">
-                        </Border>
-                        <TextBlock Text="MAC Adresses"
-                                   Grid.Column="4"
-                                   Grid.Row="0"
-                                   Style="{StaticResource BasicTextBlock}">
-                        </TextBlock>
-                        <!-- Content -->
-                        <StackPanel x:Name="AdaptersNamesOutput"
-                                    Grid.Row="1"
-                                    Grid.Column="0">
-                        </StackPanel>
-                        <StackPanel x:Name="IpAdressesOutput"
-                                    Grid.Row="1"
-                                    Grid.Column="2">
-                        </StackPanel>
-                        <StackPanel x:Name="MacAdressesOutput"
-                                    Grid.Row="1"
-                                    Grid.Column="4">
-                        </StackPanel>
+                        <Grid HorizontalAlignment="Left"
+                              Width="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="3"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="3"/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="1">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="2">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="3">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="4">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                        </Grid>
+                        <Grid Style="{StaticResource ElementsGridPart}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="20"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="Enabled Adapters Info"
+                                       Grid.Row="0"
+                                       Style="{StaticResource BasicTextBlock}">
+                            </TextBlock>
+                            <!-- DataGrid -->
+                            <DataGrid x:Name="WorkingAdaptersDG"
+                                      Grid.Row="1"
+                                      Style="{StaticResource BorderDataGrid}">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Adapters Names" Binding="{Binding AdapterName}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Ip Adresses" Binding="{Binding IPAddress}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Adapter Type" Binding="{Binding AdapterType}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="MAC Addresses" Binding="{Binding MacAddress}" 
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Operational Status" Binding="{Binding OperationalStatus}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </Grid>
                     </Grid>
                 </Border>
-                <!-- Speed Info -->
-                <Border x:Name="SpeedInfo">
-                    
+                <!-- Disabled Adapters Info -->
+                <Border x:Name="DisabledAdaptersInfo"
+                        RenderTransform="{StaticResource DAdaptersInfoPos}"
+                        Style="{StaticResource InfoBorder}">
+                    <Grid>
+                        <Grid HorizontalAlignment="Left"
+                              Width="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="3"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="3"/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="1">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="2">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="3">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Transparent"/>
+                                </Border.Background>
+                            </Border>
+                            <Border Grid.Row="4">
+                                <Border.Background>
+                                    <SolidColorBrush Color="{StaticResource OverlayDarkColor}"/>
+                                </Border.Background>
+                            </Border>
+                        </Grid>
+                        <Grid Style="{StaticResource ElementsGridPart}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="20"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="Disabled Adapters Info"
+                                       Grid.Row="0"
+                                       Style="{StaticResource BasicTextBlock}">
+                            </TextBlock>
+                            <!-- DataGrid -->
+                            <DataGrid x:Name="DisabledAdaptersDG"
+                                      Grid.Row="1"
+                                      Style="{StaticResource BorderDataGrid}">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Adapters Names" Binding="{Binding AdapterName}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Ip Adresses" Binding="{Binding IPAddress}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Adapter Type" Binding="{Binding AdapterType}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="MAC Addresses" Binding="{Binding MacAddress}" 
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                    <DataGridTextColumn Header="Operational Status" Binding="{Binding OperationalStatus}"
+                                                        FontFamily="{StaticResource Rodin}" FontSize="14"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </Grid>
+                    </Grid>
                 </Border>
             </Canvas>
         </Border>
