--- a/Pages/NetScanningMainPage.xaml
+++ b/Pages/NetScanningMainPage.xaml
@@ -6,9 +6,10 @@
       xmlns:local="clr-namespace:Niero.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="NetScanningPage">
+      Title="NetScanningMainPage"
+      Opacity="0">
 
-    <Grid>
+    <Grid Margin="40,0,40,0">
         <Frame x:Name="AdditionalPagesViewer" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Page>
